[tool.poetry]
name = "hypsandbox"
version = "0.1.0"
description = ""
authors = ["aniello.barletta <aniello.barletta@welcomeitalia.it>"]

[tool.poetry.dependencies]
python = "^3.9"
hypothesis = "^6.46.11"
schemathesis = "^3.15.3"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
